--- a/CreditCard/CreditCard/CreditCard.csproj
+++ b/CreditCard/CreditCard/CreditCard.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\BaseValidation.cs" />
     <Compile Include="Models\CreditCardInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
